// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickAssessToAssessmentDialog dialog is hidden when isShown is false 1`] = `
<Dialog
  containerClassName="insightsDialogMainOverride"
  hidden={true}
  onDismiss={[Function]}
  title="Continue to Assessment"
>
  <div>
    This will allow you to continue accessibility testing with additional tests and requirements in Assessment. All your existing data in Quick Assess will be transferred into Assessment.
  </div>
  <p>
    <Term>
      Note
    </Term>
    : 
    If you have an Assessment in progress, the current Quick Assess evaluation data will replace the Assessment evaluation and previous progress will be lost.
  </p>
  <StyledDialogFooterBase>
    <CustomizedDefaultButton
      onClick={[Function]}
      text="Cancel"
    />
    <CustomizedPrimaryButton
      autoFocus={true}
      data-automation-id="continue-to-assessment-button"
      onClick={[Function]}
      text="Continue to Assessment"
    />
  </StyledDialogFooterBase>
</Dialog>
`;

exports[`QuickAssessToAssessmentDialog dialog is not hidden when isShown is true 1`] = `
<Dialog
  containerClassName="insightsDialogMainOverride"
  hidden={false}
  onDismiss={[Function]}
  title="Continue to Assessment"
>
  <div>
    This will allow you to continue accessibility testing with additional tests and requirements in Assessment. All your existing data in Quick Assess will be transferred into Assessment.
  </div>
  <p>
    <Term>
      Note
    </Term>
    : 
    If you have an Assessment in progress, the current Quick Assess evaluation data will replace the Assessment evaluation and previous progress will be lost.
  </p>
  <StyledDialogFooterBase>
    <CustomizedDefaultButton
      onClick={[Function]}
      text="Cancel"
    />
    <CustomizedPrimaryButton
      autoFocus={true}
      data-automation-id="continue-to-assessment-button"
      onClick={[Function]}
      text="Continue to Assessment"
    />
  </StyledDialogFooterBase>
</Dialog>
`;
